[gd_scene load_steps=6 format=3 uid="uid://daypdwgtqisos"]

[ext_resource type="Script" path="res://Scripts/food.gd" id="1_hctln"]
[ext_resource type="Shader" path="res://Shaders/outline.gdshader" id="2_ke41x"]
[ext_resource type="Texture2D" uid="uid://grr3u56p53uc" path="res://Images/Food/SpoiledMilk.jpg" id="2_qeao4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_er3jy"]
shader = ExtResource("2_ke41x")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0
shader_parameter/enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvkjh"]
size = Vector2(32, 32)

[node name="DraggableObject" type="Node2D"]
script = ExtResource("1_hctln")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_er3jy")
scale = Vector2(0.08, 0.08)
texture = ExtResource("2_qeao4")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_lvkjh")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
